# mac-app-path

./: README.md  package.json  setup.cfg  setup.py
scripts/: app-path
tests/mac-app-path/examples/: case-insensitive.sh  spaces.sh
